--- a/4 - Développer une application desktop/Evaluation/build.gradle
+++ b/4 - Développer une application desktop/Evaluation/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.9'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.20'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
